<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_widget_circle">Circle</string>
    <string name="app_widget_circle_desc">A round player with the controls orbiting it</string>
    <string name="app_widget_cookie">Cookie</string>
    <string name="app_widget_cookie_desc">The cover as one big cookie, controls around it</string>
    <string name="app_widget_grid">Grid</string>
    <string name="app_widget_grid_desc">Artwork, play and the skip controls in four cells</string>
    <string name="app_widget_library">Library</string>
    <string name="app_widget_library_desc">A grid of covers from a list you choose</string>
    <string name="app_widget_nothing_playing">Nothing playing</string>
    <string name="app_widget_tap_to_play">Tap to open Booming Music</string>
    <string name="app_widget_card">Card</string>
    <string name="app_widget_card_desc">Minimalist and simplified style</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_x">Play %s</string>
    <string name="action_shuffle_play">Shuffle play</string>
    <string name="action_queue_next">Queue next</string>
    <string name="shuffle_all_label">Shuffle all</string>
    <string name="shuffle_mode">Shuffle mode</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="shuffle_button_tip">Tap for normal shuffle. Long press for advanced options.</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_seek_backward">Seek backward</string>
    <string name="action_seek_forward">Seek forward</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="reset_action">Reset</string>
    <string name="action_more">More</string>
    <string name="import_action">Import</string>
    <string name="create_action">Create</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search your library…</string>
    <string name="action_voice_search">Voice search</string>
    <string name="speech_not_supported">Your device doesn\'t support speech input</string>
    <string name="search_artist_x_label">Search artist: %s</string>
    <string name="search_album_x_label">Search album: %s</string>
    <string name="search_list_x_label">Search list: %s</string>
    <string name="search_from_x_label">Search from \"%s\"</string>
    <string name="search_year_x_label">Search year: %s</string>
    <string name="search_in_folder_x">Search in folder: %s</string>
    <string name="search_last_added">Search latest music</string>
    <string name="search_playlists">Search playlists</string>
    <string name="shuffle_mode_album">Album shuffle</string>
    <string name="shuffle_mode_artist">Artist shuffle</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="back_action">Back</string>
    <string name="add_action">Add</string>
    <string name="delete_action">Delete</string>
    <string name="remove_action">Remove</string>
    <string name="clear_action">Clear</string>
    <string name="close_action">Close</string>
    <string name="continue_action">Continue</string>
    <string name="select_all_title">Select all</string>
    <string name="x_selected">%d selected</string>
    <string name="preparing_playback_title">Preparing</string>
    <string name="restoring_playback_state">Restoring playback state and queue…</string>
    <string name="playback_stopped_title">Playback stopped</string>
    <string name="playing_notification_description">The playing notification provides actions for play/pause etc.</string>
    <string name="playing_notification_name">Playing notification</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="no_device_playlists">No playlists</string>
    <string name="select_songs_title">Select songs</string>
    <string name="playlist_x_is_empty">Playlist %s is empty.</string>
    <string name="playlist_name_cannot_be_empty">Playlist name can\'t be empty</string>
    <string name="imported_playlist_x">Imported playlist \"%1$s\".</string>
    <string name="could_not_import_the_playlist_x">Couldn\'t import the playlist \"%s\"</string>
    <string name="there_are_no_importable_playlists">There are no importable playlists.</string>
    <string name="playlist_x_not_imported">Playlist %s not imported.</string>
    <string name="action_import_playlist">Import playlist…</string>
    <string name="select_playlists_title">Select playlists</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_playlist_action">New</string>
    <string name="add_playlist_title">Add to playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="action_edit_playlist">Edit playlist</string>
    <string name="action_delete_playlist">Delete playlist</string>
    <string name="action_export_playlist">Export to file</string>
    <string name="action_clear_history">Clear history</string>
    <string name="history_cleared">History cleared</string>
    <string name="create_a_playlist">An empty playlist will be created. You can add songs later.</string>
    <string name="create_a_playlist_with_one_song">A playlist will be created and one song will be added to it.</string>
    <string name="create_a_playlist_with_x_songs">A playlist will be created and %d songs will be added automatically.</string>
    <string name="playlist_name_empty">Playlist name</string>
    <string name="playlist_description_hint">Playlist description (optional)</string>
    <string name="saved_playlist_x">Saved playlist %s.</string>
    <string name="playlist_updated">Playlist updated.</string>
    <string name="failed_to_save_playlist">Failed to save playlist.</string>
    <string name="saved_x_playlists">Saved %1$d playlists.</string>
    <string name="saved_x_playlists_failed_to_save_x">Saved %1$d playlists, failed to save %2$d.</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_playlist_x"><![CDATA[Delete playlist <b>%s</b>?]]></string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%d</b> playlists?]]></string>
    <string name="created_playlist_x">Created playlist \'%1$s\'.</string>
    <string name="could_not_create_playlist">Couldn\'t create playlist.</string>
    <string name="no_playlists_create_new">Press the \"New\" button to create a playlist</string>
    <string name="no_playlists_that_match_x">There are no playlists that match \"%s\"</string>
    <string name="songs_added_to_playlists">Songs added to playlists.</string>
    <string name="playlist_exists">Playlist %s already exists.</string>
    <string name="playlist_created">Playlist %s created successfully.</string>
    <string name="remove_song_from_playlist_title">Remove song from playlist</string>
    <string name="remove_songs_from_playlist_title">Remove songs from playlist</string>
    <string name="remove_song_x_from_playlist"><![CDATA[Remove the song <b>%1$s</b> from the playlist?]]></string>
    <string name="remove_x_songs_from_playlist"><![CDATA[Remove <b>%1$d</b> songs from the playlist?]]></string>
    <string name="playlist_empty_text">Empty playlist</string>
    <string name="action_lyrics_editor">Lyrics editor</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_auto_fill_from_musicbrainz">Auto-fill from MusicBrainz</string>
    <string name="searching">Searching…</string>
    <string name="musicbrainz_search_title">MusicBrainz search</string>
    <string name="musicbrainz_search_message">Search for song metadata on MusicBrainz using the title and artist.</string>
    <string name="musicbrainz_no_results">No results found on MusicBrainz.</string>
    <string name="musicbrainz_select_recording">Select a result</string>
    <string name="saving_changes">Saving changes</string>
    <string name="changes_saved_successfully">Changes saved successfully.</string>
    <string name="could_not_save_some_changes">Couldn\'t save some changes.</string>
    <string name="web_search">Web Search</string>
    <string name="where_do_you_want_to_search">Where do you want to search?</string>
    <string name="configure_action">Configure</string>
    <string name="blacklist_directory">Blacklist directory</string>
    <string name="add_directory">Add directory</string>
    <string name="remove_from_blacklist">Do you want to remove this directory from the blacklist?</string>
    <string name="remove_from_whitelist">Do you want to remove this directory from the whitelist?</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_clear_the_whitelist">Do you want to clear the whitelist?</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="deleted_one_song">Deleted one song</string>
    <string name="deleted_x_songs">Deleted %1$d songs</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_songs">Delete %d songs?</string>
    <string name="delete_the_song_x">Delete the song %s?</string>
    <string name="deleting_songs">Deleting songs, wait…</string>
    <string name="song_x_of_x">%1$d of %2$d • %3$s</string>
    <string name="no_equalizer">No equalizer found.</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="clear_queue">Clear queue</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="action_toggle_queue_lock">Lock/unlock queue</string>
    <string name="sleep_timer_stop_after_this_track">Stop after this track</string>
    <string name="library_header">Library</string>
    <string name="display_header">Display</string>
    <string name="general_theme_title">General theme</string>
    <string name="pure_black_theme_title">Pure Black</string>
    <string name="material_you_title">Material You</string>
    <string name="use_custom_font_title">Use custom font</string>
    <string name="appbar_mode_title">Header style</string>
    <string name="library_categories_title">Library categories</string>
    <string name="library_categories_summary">Configure visibility and order of library categories.</string>
    <string name="remember_last_page_title">Remember last page</string>
    <string name="remember_last_page_summary">Go to the last opened page on launch.</string>
    <string name="tab_mode_title">Tab titles mode</string>
    <string name="hold_tab_to_search_title">Hold tab to Search</string>
    <string name="hold_tab_to_search_summary">Long-press any navigation bar tab to open the search screen.</string>
    <string name="larger_header_image_title">Larger header image</string>
    <string name="larger_header_image_summary">Show a bigger cover image in album, artist, and playlist details.</string>
    <string name="app_language_title">App language</string>
    <string name="backup_restore_title">Backup and restore</string>
    <string name="backup_restore_summary">Manage app data backup and restore.</string>
    <string name="rotation_lock_title">Rotation lock</string>
    <string name="rotation_lock_summary">Lock the device\'s orientation. Useful in cases where music stops when rotating the device due to certain manufacturer policies.</string>
</resources>