<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.mardous.booming.ui.component.preferences.ThemePreference
        app:icon="@drawable/ic_contrast_24dp"
        app:title="@string/general_theme_title"
        app:persistent="false"
        app:layout="@layout/list_item_view_bottom_widget"
        app:widgetLayout="@layout/preference_general_theme"
        app:key="general_theme"/>

    <SwitchPreferenceCompat
        app:iconSpaceReserved="true"
        app:title="@string/material_you_title"
        app:defaultValue="@bool/md3_supported"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="material_you"/>

    <SwitchPreferenceCompat
        app:iconSpaceReserved="true"
        app:title="@string/pure_black_theme_title"
        app:defaultValue="false"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="black_theme"/>

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_text_fields_24dp"
        app:title="@string/use_custom_font_title"
        app:defaultValue="true"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="use_custom_font"/>

    <ListPreference
        app:iconSpaceReserved="true"
        app:title="@string/appbar_mode_title"
        app:entries="@array/pref_appbar_mode_entries"
        app:entryValues="@array/pref_appbar_mode_values"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="compact"
        app:layout="@layout/list_item_view"
        app:key="appbar_mode"/>

    <PreferenceCategory
        app:title="@string/library_header"
        app:layout="@layout/preference_category_title">

        <com.mardous.booming.ui.component.preferences.CustomDialogPreference
            app:icon="@drawable/ic_tab_24dp"
            app:title="@string/library_categories_title"
            app:summary="@string/library_categories_summary"
            app:layout="@layout/list_item_view"
            app:persistent="false"
            app:key="library_categories"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/remember_last_page_title"
            app:summary="@string/remember_last_page_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="remember_last_page"/>

        <ListPreference
            app:iconSpaceReserved="true"
            app:title="@string/tab_mode_title"
            app:entries="@array/pref_tab_titles_mode_entries"
            app:entryValues="@array/pref_tab_titles_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="auto"
            app:layout="@layout/list_item_view"
            app:key="tab_titles_mode"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/hold_tab_to_search_title"
            app:summary="@string/hold_tab_to_search_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="hold_tab_to_search"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/display_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_image_24dp"
            app:title="@string/larger_header_image_title"
            app:summary="@string/larger_header_image_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="larger_header_image"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>